sign_up - added name page
-added name page
-added style

--- a/src/app/pages/sign_up/sign-up-tab1/sign-up-tab1.page.html
+++ b/src/app/pages/sign_up/sign-up-tab1/sign-up-tab1.page.html
@@ -1,17 +1,21 @@
+<ion-header no-shadow class="header ion-no-border">
+ 
+</ion-header>
+
 <ion-content fullscreen class="signup-background">
-  <div class="div30"></div>
+  <div class="div20"></div>
   <ion-row>
     <ion-col size="12">
       <h1>Hi :)</h1>
-      <h2 class="mt40">
-        This subheadline shouldnt be longer than two rows in height.
+      <h2 class="mt20">
+        and welcome to RIOD!
       </h2>
     </ion-col>
   </ion-row>
 </ion-content>
 
 <ion-footer
-  style="height: 13vh !important; padding-left: 5vw; padding-right: 5vw;"
+  class="footer"
   no-shadow
 >
   <ion-row>
