--- a/src/app/pages/sign_up/sign-up-tab3/sign-up-tab3.page.html
+++ b/src/app/pages/sign_up/sign-up-tab3/sign-up-tab3.page.html
@@ -1,12 +1,12 @@
 <ion-header no-shadow class="header ion-no-border">
   <ion-row>
     <ion-col class="ion-text-left">
-      <ion-button (click)="back()" class="mt20 l-sp-btn">
+      <ion-button (click)="back()" class="mt20 l-header-btn">
         <ion-icon slot="icon-only" color="dark" name="arrow-back"></ion-icon>
       </ion-button>
     </ion-col>
     <ion-col class="ion-text-right">
-      <ion-button (click)="back()" class="mt20 r-sp-btn">
+      <ion-button (click)="back()" class="mt20 r-header-btn">
         <ion-icon slot="icon-only" color="dark" name="help"></ion-icon>
       </ion-button>
     </ion-col>
@@ -18,7 +18,7 @@
   <ion-row>
     <ion-col size="12">
       <h1>Verifikation</h1>
-      <h2 class="mt40">
+      <h2 class="mt20">
         Gib den an deine Handynummer gesendeten CODE hier ein.
       </h2>
     </ion-col>
