--- a/src/app/pages/sign_up/sign-up-tab4/sign-up-tab4.page.html
+++ b/src/app/pages/sign_up/sign-up-tab4/sign-up-tab4.page.html
@@ -17,38 +17,24 @@
   <div class="div20"></div>
   <ion-row>
     <ion-col size="12">
-      <h1>Anmelden</h1>
+      <h1>Name</h1>
       <h2 class="mt20">
-        Melde dich mit deiner Handynummer an und starte direkt durch!
+        Wie möchtest du genannt werden?
       </h2>
     </ion-col>
   </ion-row>
   <ion-row>
     <ion-input
       
-      class="default-input  mt40"
-      placeholder="   +49 157 816 746 85"
+      class="default-input mt40"
+      placeholder="Dein Name"
     ></ion-input>
   </ion-row>
 </ion-content>
 
 <ion-footer class="footer" no-shadow>
   <ion-row>
-    <ion-col class="12">
-      <ion-row> <p style="margin: 0;">oder anmelden mit:</p></ion-row>
-      <ion-row>
-        <ion-button class="external_button" color="light" shape="round">
-          <ion-icon slot="icon-only" name="logo-google"></ion-icon>
-        </ion-button>
-        <ion-button class="external_button" color="light" shape="round">
-          <ion-icon slot="icon-only" name="logo-facebook"> </ion-icon>
-        </ion-button>
-
-        <ion-button class="external_button" color="light" shape="round">
-          <ion-icon slot="icon-only" name="logo-twitter"></ion-icon>
-        </ion-button>
-      </ion-row>
-    </ion-col>
+  
     <ion-col class="ion-text-right">
       <ion-button (click)="DEMONextPage()" color="dark" class="b-btn primary">
         <ion-icon slot="icon-only" name="arrow-forward"></ion-icon>
