Revert "map-main und map-start als components"
This reverts commit 1e2f7599b945537895b3b348c1bc03fe25caf457.

--- a/src/app/pages/map/map-main/map-main.page.html
+++ b/src/app/pages/map/map-main/map-main.page.html
@@ -1,5 +1,4 @@
-<main-menu></main-menu>
 
-<map-box></map-box>
-
-<router-info-in-bottom></router-info-in-bottom>
+<ion-content>
+  <map-box></map-box> 
+</ion-content>
