--- a/src/app/pages/sign_up/sign-up-tab3/sign-up-tab3.page.html
+++ b/src/app/pages/sign_up/sign-up-tab3/sign-up-tab3.page.html
@@ -26,17 +26,16 @@
   <ion-row>
     <ion-col class="1"></ion-col>
     <ion-col class="2">
-
-      <ion-input class="mt40 verifikation-input" placeholder="0"  type="text" maxLength="1" size="1" min="0" max="9" pattern="[0-9]{1}"></ion-input>
+      <ion-input class="mt40 verifikation-input" placeholder="0"></ion-input>
     </ion-col>
     <ion-col class="2">
-      <ion-input class="mt40 verifikation-input" placeholder="0"  type="text" maxLength="1" size="1" min="0" max="9" pattern="[0-9]{1}"></ion-input>
+      <ion-input class="mt40 verifikation-input" placeholder="0"></ion-input>
     </ion-col>
     <ion-col class="2">
-      <ion-input class="mt40 verifikation-input" placeholder="0"  type="text" maxLength="1" size="1" min="0" max="9" pattern="[0-9]{1}"></ion-input>
+      <ion-input class="mt40 verifikation-input" placeholder="0"></ion-input>
     </ion-col>
     <ion-col class="2">
-      <ion-input class="mt40 verifikation-input" placeholder="0"  type="text" maxLength="1" size="1" min="0" max="9" pattern="[0-9]{1}"></ion-input>
+      <ion-input class="mt40 verifikation-input" placeholder="0"></ion-input>
     </ion-col>
     <ion-col class="1"></ion-col>
   </ion-row>
