--- a/src/app/pages/sign_up/sign-up-tab1/sign-up-tab1.page.html
+++ b/src/app/pages/sign_up/sign-up-tab1/sign-up-tab1.page.html
@@ -1,22 +1,28 @@
 <ion-header no-shadow class="header ion-no-border">
+ 
 </ion-header>
+
 <ion-content fullscreen class="signup-background">
-    <div class="div20"></div>
-    <ion-row>
-        <ion-col size="12">
-            <h1>Hi :)</h1>
-            <h2 class="mt20">
-                and welcome to RIOD!
-            </h2>
-        </ion-col>
-    </ion-row>
+  <div class="div20"></div>
+  <ion-row>
+    <ion-col size="12">
+      <h1>Hi :)</h1>
+      <h2 class="mt20">
+        and welcome to RIOD!
+      </h2>
+    </ion-col>
+  </ion-row>
 </ion-content>
-<ion-footer class="footer" no-shadow ion-no-border>
-    <ion-row>
-        <ion-col class="ion-text-right">
-            <ion-button (click)="DEMONextPage()" color="dark" class="b-btn primary">
-                <ion-icon slot="icon-only" name="arrow-forward"></ion-icon>
-            </ion-button>
-        </ion-col>
-    </ion-row>
+
+<ion-footer
+  class="footer"
+  no-shadow
+>
+  <ion-row>
+    <ion-col class="ion-text-right">
+      <ion-button (click)="DEMONextPage()" color="dark" class="b-btn primary">
+        <ion-icon slot="icon-only" name="arrow-forward"></ion-icon>
+      </ion-button>
+    </ion-col>
+  </ion-row>
 </ion-footer>
