--- a/src/app/Components/search-bar/search-bar.component.html
+++ b/src/app/Components/search-bar/search-bar.component.html
@@ -1,32 +1,35 @@
-<ion-header class="header">
-    <ion-toolbar ion-no-border>
-        <ion-searchbar class="m1">
-        </ion-searchbar>
-        <ion-buttons slot="end" class="m1">
-            <ion-button>
-                <ion-icon slot="icon-only" name="person-circle-outline"></ion-icon>
-            </ion-button>
-        </ion-buttons>
-    </ion-toolbar>
-    <ion-toolbar ion-no-border>
-        <div class="container">
-            <div class="scroll" scrollX="true">
-                <span style="margin-left: 5vw;">
-                    <ion-button class="s-btn primary"><ion-icon name="home-outline"></ion-icon></ion-button>
-                </span>
-                <span style="margin-left: 5vw;">
-                    <ion-button class="s-btn primary"><ion-icon name="briefcase-outline"></ion-icon></ion-button>
-                </span>
-                <span style="margin-left: 5vw;">
-                    <ion-button class="s-btn primary"><ion-icon name="heart-outline"></ion-icon></ion-button>
-                </span>
-                <span style="margin-left: 5vw;">
-                    <ion-button class="s-btn primary"><ion-icon name="barbell-outline"></ion-icon></ion-button>
-                </span>
-                <span style="margin-left: 5vw;">
-                    <ion-button class="s-btn primary"><ion-icon name="restaurant-outline"></ion-icon></ion-button>
-                </span>
-            </div>
+<div class="over">
+    <div class="wrap">
+        <input class="search" placeholder="Hier suchen.." />
+        <button class="btn"><img src="'../../../assets/settings/profile-pic.jpg" alt="Avatar"></button>
+    </div>
+    <div class="container">
+        <div class="scroll" scrollX="true">
+            <span style="margin-left: 0px;">
+                <ion-button class="s-btn primary">
+                    <ion-icon name="home-outline"></ion-icon>
+                </ion-button>
+            </span>
+            <span style="margin-left: 10px;">
+                <ion-button class="s-btn primary">
+                    <ion-icon name="briefcase-outline"></ion-icon>
+                </ion-button>
+            </span>
+            <span style="margin-left: 10px;">
+                <ion-button class="s-btn primary">
+                    <ion-icon name="heart-outline"></ion-icon>
+                </ion-button>
+            </span>
+            <span style="margin-left: 10px;">
+                <ion-button class="s-btn primary">
+                    <ion-icon name="barbell-outline"></ion-icon>
+                </ion-button>
+            </span>
+            <span style="margin-left: 10px;">
+                <ion-button class="s-btn primary">
+                    <ion-icon name="restaurant-outline"></ion-icon>
+                </ion-button>
+            </span>
         </div>
-    </ion-toolbar>
-</ion-header>
+    </div>
+</div>
