--- a/src/app/pages/indicator/indicator-gruppe/indicator-gruppe.page.html
+++ b/src/app/pages/indicator/indicator-gruppe/indicator-gruppe.page.html
@@ -1,5 +1,5 @@
 <div class="match-parent">
-    <img src="../../../../assets/icon/indicator-einzeln.png" style="width: 40vw; margin-top: 20vh; margin-left: 28%;" alt="">
+    <img src="../../../../assets/riod.svg" style="width: 40vw; margin-top: 20vh; margin-left: 28%;" alt="">
 </div>
 <div style="background-color:#ffe500;">
   <ion-toolbar>
