--- a/src/app/pages/map/map-start/map-start.page.html
+++ b/src/app/pages/map/map-start/map-start.page.html
@@ -1,3 +1,5 @@
-<search-bar></search-bar>
+<ion-header>
+	<search-bar></search-bar>
+</ion-header>
 <map-box></map-box>
 <riding-toggle></riding-toggle>
