--- a/src/app/Components/search-bar/search-bar.component.scss
+++ b/src/app/Components/search-bar/search-bar.component.scss
@@ -1,17 +1,57 @@
-.container {
-  width: 100%;
-  background-color: transparent;
-  overflow: hidden; 
-  white-space: nowrap;
-  ::-webkit-scrollbar {
-    display: none;
-  }
-  
-  .scroll {
-    overflow: auto;
-  }
-}
+.over {
+    background-color: #383838;
+    width: 100vw;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 20px;
+    padding-bottom: 10px;
 
-.m1{
-  margin-top:5vw;
+    .wrap {
+
+        padding-left: 20px;
+        padding-right: 10px;
+        width: auto;
+        height: 50px;
+        border-radius: 10px;
+        background-color: #4F4F4F;
+
+
+        .search {
+            background-color: transparent;
+            width: auto;
+            height: 50px;
+            float: left;
+            border: 0px;
+        }
+
+        .btn {
+            width: 50px;
+            height: 50px;
+            float: right;
+            background-color: transparent;
+        }
+    }
+
+    img {
+        border-radius: 50%;
+    }
+
+    .container {
+        margin-top: 10px;
+        width: 100%;
+        height: 50%;
+        background-color: transparent;
+        overflow: hidden;
+        white-space: nowrap;
+
+        ::-webkit-scrollbar {
+            display: none;
+        }
+
+        .scroll {
+            overflow: auto;
+        }
+    }
+
+
 }
