Alle Component fertig mit CSS

--- a/src/app/Components/main-menu/main-menu.component.html
+++ b/src/app/Components/main-menu/main-menu.component.html
@@ -1,38 +1,23 @@
-<div class="match-parent">
-    <div id="header">
-        <ion-toolbar>
-            <ion-buttons slot="start" class="m1">
-                <ion-button>
-                    <ion-icon slot="icon-only" name="locate-outline"></ion-icon>
-                </ion-button>
-            </ion-buttons>
-            <ion-input class="m1" placeholder="Mein Standort"></ion-input>
-        </ion-toolbar>
-        <ion-toolbar>
-            <ion-buttons>
-                <ion-button slot="start">
-                    <ion-icon slot="icon-only" name="move-outline"></ion-icon>
-                </ion-button>
-                <ion-item>
-                    <ion-input placeholder="OS32"></ion-input>
-                </ion-item>
-                <ion-item>
-                    <ion-input placeholder="-"></ion-input>
-                </ion-item>
-                <ion-item>
-                    <ion-input placeholder="-"></ion-input>
-                </ion-item>
-            </ion-buttons>
-        </ion-toolbar>
-        <ion-toolbar>
-            <ion-buttons slot="start">
-                <ion-button>
-                    <ion-icon slot="icon-only" name="location-outline"></ion-icon>
-                </ion-button>
-            </ion-buttons>
-            <ion-input placeholder="Mein Ziel"></ion-input>
-        </ion-toolbar>
+<div class="over">
+    <div class="wrap">
+        <button ion-button class="btn1"></button>
+        <input class="search" placeholder="Mein Standort" />
+    </div>
+    <div class="wrap">
+        <button ion-button class="btn2"></button>
+        <div class="point">
+            <h3> OS32 </h3>
+        </div>
+        <div class="point">
+            <h3> - </h3>
+        </div>
+        <div class="point">
+            <h3> - </h3>
+        </div>
+    </div>
+    <div class="wrap">
+        <button ion-button class="btn3">
+        </button>
+        <input class="search" placeholder="Mein Ziel" />
     </div>
 </div>
-
-
