--- a/src/app/Components/router-info-in-bottom/router-info-in-bottom.component.html
+++ b/src/app/Components/router-info-in-bottom/router-info-in-bottom.component.html
@@ -1,19 +1,14 @@
-<ion-footer class="ion-no-border">
-    <ion-toolbar>
-        <h3>7 minuten(12 Kilometer)</h3>
-    </ion-toolbar>
-    <ion-toolbar>
-        <ion-buttons>
-            <ion-button style="margin-left:30px">
-                <ion-icon name="navigate-outline"></ion-icon>
-                Start
-            </ion-button>
-            <ion-button style="margin-left:40px">
-                <ion-icon slot="icon-only" name="save-outline"></ion-icon>
-            </ion-button>
-            <ion-button style="margin-left:20px">
-                <ion-icon slot="icon-only" name="close-outline"></ion-icon>
-            </ion-button>
-        </ion-buttons>
-    </ion-toolbar>
-</ion-footer>
+<div class="over">
+    <div class="wrap">
+       <h3>7 Minuten<span style="font-weight: 100;"> (12 Kilometer)</span></h3>
+    </div>
+    <div class="wrap">
+       <button ion-button id="btn1"></button> 
+    </div>
+     <div class="wrap">
+       <button ion-button id="btn2"></button> 
+    </div>
+     <div class="wrap">
+       <button ion-button id="btn3"></button> 
+    </div>
+</div>
