--- a/src/app/pages/map/map-main/map-main.page.html
+++ b/src/app/pages/map/map-main/map-main.page.html
@@ -1,5 +1,7 @@
-<main-menu></main-menu>
-
+<ion-header>
+    <main-menu></main-menu>
+</ion-header>
 <map-box></map-box>
-
-<router-info-in-bottom></router-info-in-bottom>
+<ion-footer>
+    <router-info-in-bottom></router-info-in-bottom>
+</ion-footer>
