--- a/src/app/Components/main-menu/main-menu.component.scss
+++ b/src/app/Components/main-menu/main-menu.component.scss
@@ -1,9 +1,78 @@
-.match-parent{
-    width: 100%;
-    
-    padding-top: 1vh;
-    padding-bottom: 1vh;
-    padding-left: 5vw;
-    padding-right: 5vw;	
 
+
+.over {
+    background-color: #383838;
+    width: 100%;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+
+    .wrap {
+        width: 100%;
+        height: 60px;
+
+        .btn1 {
+            width: 50px;
+            height: 50px;
+            float: left;
+            background: url('../../../assets/icon/standort.svg');
+            background-repeat: no-repeat;
+            background-position: center;
+
+        }
+        .btn2 {
+            width: 50px;
+            height: 50px;
+            float: left;
+            background: url('../../../assets/icon/assemblypoint1.svg');
+            background-repeat: no-repeat;
+            background-position: center;
+
+        }
+        .btn3 {
+            width: 50px;
+            height: 50px;
+            float: left;
+            background: url('../../../assets/icon/location.svg');
+            background-repeat: no-repeat;
+            background-position: center;
+
+        }
+        .point{
+            border-radius: 20px;
+            background-color: #4F4F4F;
+            width: calc( (100% - 80px)/3);
+            float: left;
+            height: 40px;
+            margin-left: 10px;
+            margin-top: 5px;
+
+        }
+
+        .search {
+            border-radius: 5px;
+            background-color: #4F4F4F;
+            border: 0px;
+            padding-left: 20px;
+            margin-left: 10px;
+        }
+    }
+
+}
+
+input {
+    width: calc(100% - 60px);
+    float: right;
+    height: 50px;
+}
+
+h3{
+    text-align: center;
+    color: white;
+}
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: white;
+  opacity: 1; /* Firefox */
+  font-family: effra;
 }
