--- a/src/app/Components/waiting-at-as-small/waiting-at-as-small.component.scss
+++ b/src/app/Components/waiting-at-as-small/waiting-at-as-small.component.scss
@@ -47,7 +47,7 @@
     }
 }
 
-#btn1 {
+.btn1 {
     width: 100%;
     height: 100%;
     background: url('../../../assets/icon/swipe-btn.svg');
@@ -55,7 +55,7 @@
     background-position: center;
 }
 
-#btn2 {
+#btn2-toChange {
     color: white;
     width: 80px;
     height: 30px;
@@ -88,6 +88,7 @@ h2 {
     margin: 0px;
     line-height: 36px;
 }
+
 
 
 
@@ -124,15 +125,10 @@ $input-width: 80px; // adjust only this number for dimensions
 $input-radius: calc(#{$input-width} / 2);
 $input-height: calc(#{$input-width} / 2);
 
-.knob-wrap {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
 
 
-input[type="checkbox"] {
+.riod-toggle {
     margin-top: 5px;
     position: relative;
     appearance: none;
@@ -200,3 +196,5 @@ input[type="checkbox"] {
     height: 10px;
     margin: 0 auto;
 }
+
+
