Adds Name in Sign Up, Login Flow done

--- a/src/app/pages/sign_up/sign-up-tab4/sign-up-tab4.page.html
+++ b/src/app/pages/sign_up/sign-up-tab4/sign-up-tab4.page.html
@@ -36,7 +36,7 @@
   <ion-row>
   
     <ion-col class="ion-text-right">
-      <ion-button (click)="DEMONextPage()" color="dark" class="b-btn primary">
+      <ion-button (click)="saveName()" color="dark" class="b-btn primary">
         <ion-icon slot="icon-only" name="arrow-forward"></ion-icon>
       </ion-button>
     </ion-col>
