--- a/src/app/Components/main-menu/main-menu.component.html
+++ b/src/app/Components/main-menu/main-menu.component.html
@@ -1,9 +1,10 @@
 <div class="over">
     <div class="wrap">
         <button ion-button class="btn1"></button>
-        <input class="search" type="text"  name="finish" [(ngModel)]="newStart" (ngModelChange) ="setNewStart(newStart)"  placeholder="Mein Standort" />
-      
+        <!-- <input class="search" type="text"  name="finish" [(ngModel)]="newStart" (ngModelChange) ="setNewStart(newStart)"  placeholder="Mein Standort"/> -->
+        <input class="search" type="text"  name="finish" placeholder="Mein Standort"/>
     </div>
+    
     <div class="wrap">
         <button ion-button class="btn2"></button>
         
