--- a/src/app/Components/tutorial/tutorial-overlay1/tutorial-overlay1.component.html
+++ b/src/app/Components/tutorial/tutorial-overlay1/tutorial-overlay1.component.html
@@ -1,7 +1,7 @@
 <ion-content fullscreen scroll-y="false">
     <ion-slides pager="true" pager="false" #mySlider>
         <ion-slide>
-            <div (click)="swipeNext">
+            <div (click)="swipeNext()">
                 <img src="../../../../assets/tutorials/explain_search.svg" />
             </div>
             <p class="pstyle1">Über die Suchleiste gibst du ein,<br>wo du hin willst.</p>
@@ -15,7 +15,7 @@
             </ion-row>
         </ion-slide>
         <ion-slide>
-            <div (click)="swipeNext">
+            <div (click)="swipeNext()">
                 <img src="../../../../assets/tutorials/explain_profile.svg" style="width:70%; margin-left: 45%; margin-top: -20%;" />
                 <p class="pstyle2">Dein Profil und alle weiteren<br>Einstellungen findest du hier.</p>
             </div>
@@ -29,7 +29,7 @@
             </ion-row>
         </ion-slide>
         <ion-slide>
-            <div (click)="swipeNext">
+            <div (click)="swipeNext()">
                 <img src="../../../../assets/tutorials/explain_person.svg" style="width: 65vw; margin-top: 20vh; margin-left: 20%;" alt="">
             </div>
             <br />
