--- a/src/app/Components/tutorial/tutorial-overlay2/tutorial-overlay2.component.html
+++ b/src/app/Components/tutorial/tutorial-overlay2/tutorial-overlay2.component.html
@@ -1,7 +1,7 @@
 <ion-content fullscreen scroll-y="false">
     <ion-slides pager="true" pager="false" #mySlider>
         <ion-slide>
-            <div (click)="swipeNext">
+            <div (click)="swipeNext()">
                 <img src="../../../../assets/tutorials/explain_assemplypoint.svg" style="width: 65vw; margin-top: 20vh; margin-left: 3%;" alt="">
             </div>
             <br />
