--- a/src/app/Components/waiting-at-as-small/waiting-at-as-small.component.html
+++ b/src/app/Components/waiting-at-as-small/waiting-at-as-small.component.html
@@ -7,8 +7,8 @@
 </div>
 <div class="over" id="myOver">
     <div class="wrap1">
-        <button ion-button class="btn1" id="hide-div" (click)="hideMore()"></button>
-        <button ion-button class="btn1" id="show-div" hidden="true" (click)="showMore()"></button>
+        <button ion-button class="btn1" id="hide-div"></button>
+        <button ion-button class="btn1" id="show-div" hidden="true"></button>
     </div>
     <div class="wrap wrap2">
         <div class="icon">
