--- a/src/app/Components/main-menu/main-menu.component.scss
+++ b/src/app/Components/main-menu/main-menu.component.scss
@@ -1,15 +1,17 @@
+
+
 .over {
     background-color: #383838;
     width: 100%;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
     padding-top: 20px;
     padding-bottom: 10px;
 
     .wrap {
         width: 100%;
         height: 60px;
-        padding-top:5px;
+
         .btn1 {
             width: 50px;
             height: 50px;
@@ -19,7 +21,15 @@
             background-position: center;
 
         }
+        .btn2 {
+            width: 50px;
+            height: 50px;
+            float: left;
+            background: url('../../../assets/icon/assemblypoint1.svg');
+            background-repeat: no-repeat;
+            background-position: center;
 
+        }
         .btn3 {
             width: 50px;
             height: 50px;
@@ -29,7 +39,16 @@
             background-position: center;
 
         }
+        .point{
+            border-radius: 20px;
+            background-color: #4F4F4F;
+            width: calc( (100% - 80px)/3);
+            float: left;
+            height: 40px;
+            margin-left: 10px;
+            margin-top: 5px;
 
+        }
 
         .search {
             border-radius: 5px;
@@ -42,49 +61,23 @@
 
 }
 
-.wrap2 {
-    width: 100%;
-    height: 60px;
-    padding-top: 5px;
-
-    .point {
-        border-radius: 20px;
-        background-color: #4F4F4F;
-        width: calc((100% - 80px)/3);
-        float: left;
-        height: 40px;
-        margin-left: 10px;
-        margin-top: 5px;
-    }
-    .btn2 {
-            width: 50px;
-            height: 50px;
-            float: left;
-            background: url('../../../assets/icon/assemblypoint1.svg');
-            background-repeat: no-repeat;
-            background-position: center;
-
-        }
-}
-
 input {
     width: calc(100% - 60px);
     float: right;
     height: 50px;
-    
+}
+ion-input {
+    width: calc(100% - 60px);
+    float: right;
+    height: 50px;
 }
 
-h3 {
+h3{
     text-align: center;
     color: white;
-    margin-top: 10px;
-    margin-bottom: 0px;
 }
-
-::placeholder {
-    /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: white;
-    opacity: 1;
-    /* Firefox */
-    font-family: effra;
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: white;
+  opacity: 1; /* Firefox */
+  font-family: effra;
 }
