--- a/src/app/pages/map/map-start/map-start.page.html
+++ b/src/app/pages/map/map-start/map-start.page.html
@@ -3,7 +3,7 @@
     <main-menu [hidden]="!showMain" ></main-menu>
 </ion-header>
 <map-box></map-box>
-  <ion-row id="ONLY FOR TESTING">
+  <ion-row id="ONLY FOR TESTING" style="position: absolute; bottom: 50px;">
     <ion-button color="tertiary" shape="round" style="height: 60px; width: 60px;" (click)="locateDevice()">
       <div>
         <ion-icon icon="locate-outline"></ion-icon>
@@ -14,9 +14,18 @@
         <ion-icon icon="book"></ion-icon>
       </div>
     </ion-button>
+    <ion-button color="primary" shape="round" style="height: 60px; width: 60px;" (click)="presentModal()">
+      <div>
+        <ion-icon icon="help"></ion-icon>
+      </div>
+    </ion-button>
+    <ion-button color="primary" shape="round" style="height: 60px; width: 60px;" (click)="DEMOsendToRTDB()">
+      <div>
+        <ion-icon icon="server"></ion-icon>
+      </div>
+    </ion-button>
+
   </ion-row>
-<ion-button (click)="presentModal()">modal test</ion-button>
-<ion-button (click)="DEMOsendToRTDB()">Send location to DB</ion-button>
 <riding-toggle [hidden]="!showStart"></riding-toggle>
 
 <ion-footer [hidden]="!showMain" >
