Adds Indicator Screen

--- a/src/app/Components/ride-indicator-assembly/ride-indicator-assembly.component.html
+++ b/src/app/Components/ride-indicator-assembly/ride-indicator-assembly.component.html
@@ -23,7 +23,7 @@
     </div>
     <div class="wrap">
         <div class="item">
-            <input type="checkbox" /> <!-- onclick='handleClick(this);' -->
+            <input (click)="dismiss()" type="checkbox" /> <!-- onclick='handleClick(this);' -->
         </div>
     </div>
 </div>
