--- a/src/app/Components/ride-indicator-final/ride-indicator-final.component.html
+++ b/src/app/Components/ride-indicator-final/ride-indicator-final.component.html
@@ -13,7 +13,7 @@
     
     <div class="wrap wrap2">
         <div class="item">
-            <input type="checkbox" /> <!-- onclick='handleClick(this);' -->
+            <input (click)="dismiss()" type="checkbox" />
         </div>
     </div>
 </div>
