--- a/src/app/Components/riding-toggle/riding-toggle.component.html
+++ b/src/app/Components/riding-toggle/riding-toggle.component.html
@@ -1,3 +1,3 @@
 <div class="item">
-    <input type="checkbox"  /> <!-- onclick='handleClick(this);' -->
+    <input (click)="showIndicatorScreen()" type="checkbox" />
 </div>
