Enhances Settings pages (Transitions fixed, Added name)

--- a/src/app/pages/settings/settings-main/settings-main.page.html
+++ b/src/app/pages/settings/settings-main/settings-main.page.html
@@ -6,7 +6,7 @@
                 <h6>Wofür die Daten?</h6>
             </ion-col>
             <ion-col size="3">
-                <button class="cancel"></button>
+                <button (click)="cancel()" class="cancel"></button>
             </ion-col>
         </ion-row>
     </ion-grid>
