--- a/src/app/pages/settings/settings-main-dropbox/settings-main-dropbox.page.html
+++ b/src/app/pages/settings/settings-main-dropbox/settings-main-dropbox.page.html
@@ -14,7 +14,7 @@
                 </div>
                 <div style="padding-left: 75px;">
                     <ion-row style="height: 25px; ">
-                        <h3 style="margin: 0px; line-height: 1.5;">Duc Thang Duong</h3>
+                        <h3 style="margin: 0px; line-height: 1.5;">{{ name }}</h3>
                     </ion-row>
                     <ion-row style="height: 25px;">
                         <p style="margin: 0px; line-height: 1.5;">+49 176 764 99803</p>
